<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GraphActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:paddingTop="6dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:text="@string/txt_title_thongke"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-smallcaps"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/largest_font_size"
            android:textStyle="bold"/>

    </LinearLayout>

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="8dp">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="Thống kê ngày: "
           android:layout_marginEnd="12dp"
           android:layout_toStartOf="@id/graph_timepicker"
           android:textSize="@dimen/large_font_size"
           android:textColor="@color/black"
           android:textStyle="bold"
           android:layout_centerVertical="true"
           android:fontFamily="sans-serif-smallcaps"/>

       <TextView
           android:id="@+id/graph_timepicker"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginEnd="8dp"
           android:layout_marginTop="12dp"
           android:layout_centerVertical="true"
           android:textSize="@dimen/large_font_size"
           android:textColor="@color/black"
           android:fontFamily="sans-serif-smallcaps"
           android:background="@drawable/anim_ripple_blue"
           android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
           android:layout_alignParentEnd="true"
           android:gravity="center"/>

   </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_thong_ke_cam_xuc"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:textSize="@dimen/large_font_size"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/decor_stroke"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:paddingStart="20dp"
        android:paddingEnd="30dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp">

        <TextView
            android:id="@+id/graphTv_Normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_normal"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_font_size"/>
        <TextView
            android:id="@+id/graphTv_Happy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_below="@id/graphTv_Normal"
            android:text="@string/txt_happy"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_font_size"/>
        <TextView
            android:id="@+id/graphTv_UnHappy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_below="@id/graphTv_Happy"
            android:text="@string/txt_unhappy"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_font_size"/>

        <TextView
            android:id="@+id/graphTv_NumNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_font_size"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/graphTv_NumHappy"
            android:layout_below="@id/graphTv_NumNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_font_size"/>

        <TextView
            android:id="@+id/graphTv_NumUnHappy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_below="@id/graphTv_NumHappy"
            android:layout_alignParentEnd="true"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_font_size"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_xem_duoi_dang"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="@dimen/large_font_size"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingEnd="12dp"
        android:paddingStart="12dp">

        <Spinner
            android:id="@+id/graph_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="12dp"
            android:background="@null"/>

        <Button
            android:id="@+id/graph_showGraph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/decor_btn_blue"
            android:textColor="@color/white"
            android:text="@string/txt_xem"/>

    </RelativeLayout>

   <LinearLayout
       android:id="@+id/graph_contrainer1"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:visibility="gone"
       android:layout_marginTop="28dp"
       android:orientation="horizontal">

       <TextView
           android:id="@+id/graph_title_chooseDate"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="Thống kê từ ngày : "
           android:layout_marginStart="12dp"
           android:textColor="@color/black"
           android:textSize="@dimen/large_font_size"
           android:textStyle="bold"/>

       <TextView
           android:id="@+id/txtEndDate"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="12dp"
           android:textColor="@color/black"
           android:fontFamily="sans-serif-smallcaps"
           android:textSize="@dimen/large_font_size" />

   </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:id="@+id/grap_container2"
        android:visibility="gone"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Đến ngày: "
            android:layout_marginStart="12dp"
            android:textColor="@color/black"
            android:textSize="@dimen/large_font_size"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/graph_timepickerEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:textSize="@dimen/large_font_size"
            android:background="@drawable/anim_ripple_blue"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-smallcaps"
            android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
            android:gravity="center"/>

    </LinearLayout>
</LinearLayout>